Prevents about page image showing on smaller screens

--- a/app/_scss/pages/about.scss
+++ b/app/_scss/pages/about.scss
@@ -32,8 +32,12 @@
 		main {
 			width: 100%;
 
-			#image figure {
-				background: inherit;
+			#image {
+				display: none;
+
+				figure {
+					background: inherit;
+				}
 			}
 		}
 	}
